SQOOP-3360: Fix hive-exec dependency issues in Gradle
(Szabolcs Vasas via Boglarka Egyed)

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,8 @@ aspectjVersion=1.7.4
 zookeeperVersion=3.4.6
 hbaseVersion=1.2.4
 hcatalogVersion=1.2.1
+kryoVersion=2.22
+guavaVersion=14.0.1
 
 accumuloVersion=1.6.2
 
