--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,7 @@ configurations.all {
     resolutionStrategy {
         force group: 'org.apache.avro', name: 'avro', version: avroVersion
         force group: 'org.apache.avro', name: 'avro-mapred', version: avroVersion
+        force group: 'com.google.guava', name: 'guava', version: guavaVersion
     }
     exclude group: 'org.apache.hadoop', module: 'avro'
 }
@@ -106,7 +107,11 @@ dependencies {
     common group: 'org.apache.hbase', name: 'hbase-common', version: hbaseVersion
     common (group: 'org.apache.hive.hcatalog', name: 'hive-hcatalog-core', version: hcatalogVersion) {
         exclude  group: 'org.apache.avro', module: 'avro'
+        exclude  group: 'org.apache.hive', module: 'hive-exec'
     }
+    common group: 'org.apache.hive', name: 'hive-exec', version: hcatalogVersion, classifier: 'core'
+    // Kryo is a dependency of hive-exec:core
+    common group: 'com.esotericsoftware.kryo', name: 'kryo', version: kryoVersion
     common (group: 'org.apache.hive', name: 'hive-jdbc', version: hcatalogVersion) {
         exclude  group: 'org.apache.avro', module: 'avro'
     }
