--- a/gradle.properties
+++ b/gradle.properties
@@ -48,6 +48,7 @@ commonsnetVersion=3.1
 log4jVersion=1.2.16
 junitVersion=4.12
 mockitoallVersion=1.9.5
+systemRulesVersion=1.17.0
 assertjVersion=2.8.0
 
 checkstyleVersion=5.5
