--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -41,6 +41,7 @@ ivy.version=2.3.0
 junit.version=4.12
 assertj.version=2.8.0
 mockito-all.version=1.9.5
+system-rules.version=1.17.0
 
 h2.version=1.3.170
 
