SQOOP-3403: Sqoop2: Add Fero Szabo to committer list in our pom file
(Fero Szabo)

--- a/pom.xml
+++ b/pom.xml
@@ -981,6 +981,14 @@ limitations under the License.
       </roles>
     </developer>
     <developer>
+      <id>fero</id>
+      <name>Fero Szabo</name>
+      <organization>Cloudera</organization>
+      <roles>
+        <role>committer</role>
+      </roles>
+    </developer>
+    <developer>
       <id>cheolsoo</id>
       <name>Cheolsoo Park</name>
       <organization>StreamSets</organization>
