--- a/build.xml
+++ b/build.xml
@@ -185,63 +185,59 @@
       value="${name}/[conf]/[artifact]-[revision](-[classifier]).[ext]"/>
 
   <!--test related properties -->
-  <property name="sqoop.test.oracle.connectstring" value="jdbc:oracle:thin:@//localhost:1521/xe"/>
-  <property name="sqoop.test.oracle.username" value="SYSTEM"/>
-  <property name="sqoop.test.oracle.password" value="oracle"/>
-
-  <property name="sqoop.test.oracle-ee.connectstring" value="jdbc:oracle:thin:@//localhost:1522/sqoop"/>
-  <property name="sqoop.test.oracle-ee.username" value="SYSTEM"/>
-  <property name="sqoop.test.oracle-ee.password" value="Sqoop12345"/>
+  <property name="sqoop.test.oracle.connectstring" value="jdbc:oracle:thin:@//localhost/xe"/>
+  <property name="sqoop.test.oracle.username" value="SQOOPTEST"/>
+  <property name="sqoop.test.oracle.password" value="12345"/>
 
   <property name="sqoop.test.mysql.connectstring.host_url"
-            value="jdbc:mysql://127.0.0.1:13306/"/>
+            value="jdbc:mysql://localhost/"/>
 
   <property name="sqoop.test.mysql.username"
-            value="sqoop"/>
-  <property name="sqoop.test.mysql.password" value="Sqoop12345" />
+            value="${env.USER}"/>
+  <property name="sqoop.test.mysql.password" value="" />
   <property name="sqoop.test.mysql.databasename"
-            value="sqoop"/>
+            value="sqooptestdb"/>
 
   <property name="sqoop.test.cubrid.connectstring.host_url"
-            value="jdbc:cubrid:localhost:33000"/>
-  <property name="sqoop.test.cubrid.connectstring.database" value="sqoop" />
-  <property name="sqoop.test.cubrid.connectstring.username" value="sqoop" />
-  <property name="sqoop.test.cubrid.connectstring.password" value="Sqoop12345" />
+            value="jdbc:cubrid:localhost:30000"/>
+  <property name="sqoop.test.cubrid.connectstring.database" value="SQOOPCUBRIDTEST" />
+  <property name="sqoop.test.cubrid.connectstring.username" value="SQOOPUSER" />
+  <property name="sqoop.test.cubrid.connectstring.password" value="PASSWORD" />
 
   <property name="sqoop.test.postgresql.connectstring.host_url"
-            value="jdbc:postgresql://localhost:15432/"/>
+            value="jdbc:postgresql://localhost/"/>
 
   <property name="sqoop.test.postgresql.database"
-            value="sqoop" />
+            value="sqooptest" />
 
   <property name="sqoop.test.postgresql.tablespace"
-            value="sqoop" />
+            value="sqooptest" />
 
   <property name="sqoop.test.postgresql.username"
-            value="sqoop" />
+            value="sqooptest" />
 
   <property name="sqoop.test.postgresql.password"
-            value="Sqoop12345" />
+            value="" />
 
   <property name="sqoop.test.postgresql.pg_bulkload"
             value="pg_bulkload" />
 
   <property name="sqoop.test.sqlserver.connectstring.host_url"
-            value="jdbc:sqlserver://localhost:1433"/>
+            value="jdbc:sqlserver://sqlserverhost:1433"/>
 
   <property name="sqoop.test.sqlserver.database"
-            value="master"/>
+            value="sqooptest"/>
 
   <property name="ms.sqlserver.username"
-            value="sa"/>
+            value="SQOOPUSER"/>
 
   <property name="ms.sqlserver.password"
-            value="Sqoop12345"/>
+            value="PASSWORD"/>
 
-  <property name="sqoop.test.db2.connectstring.host_url" value="jdbc:db2://localhost:50000" />
+  <property name="sqoop.test.db2.connectstring.host_url" value="jdbc:db2://db2host:50000" />
   <property name="sqoop.test.db2.connectstring.database" value="SQOOP" />
-  <property name="sqoop.test.db2.connectstring.username" value="DB2INST1" />
-  <property name="sqoop.test.db2.connectstring.password" value="Sqoop12345" />
+  <property name="sqoop.test.db2.connectstring.username" value="SQOOP" />
+  <property name="sqoop.test.db2.connectstring.password" value="SQOOP" />
 
   <property name="sqoop.test.netezza.host" value="nz-host" />
   <property name="sqoop.test.netezza.port" value="5480" />
@@ -839,15 +835,6 @@
       <sysproperty key="sqoop.test.oracle.password"
                    value="${sqoop.test.oracle.password}"/>
 
-      <sysproperty key="sqoop.test.oracle-ee.connectstring"
-                   value="${sqoop.test.oracle-ee.connectstring}"/>
-
-      <sysproperty key="sqoop.test.oracle-ee.username"
-                   value="${sqoop.test.oracle-ee.username}"/>
-
-      <sysproperty key="sqoop.test.oracle-ee.password"
-                   value="${sqoop.test.oracle-ee.password}"/>
-
       <sysproperty key="sqoop.test.mysql.connectstring.host_url"
                    value="${sqoop.test.mysql.connectstring.host_url}"/>
 
@@ -962,7 +949,7 @@
                  excludes="**/${test.exclude}.java,**/KerberizedTest.java,**/IntegrationTest.java,**/SqoopTest.java,
                  **/UnitTest.java,**/CubridTest.java,**/Db2Test.java,**/MainFrameTest.java,**/MysqlTest.java,
                  **/NetezzaTest.java,**/OracleTest.java,**/PostgresqlTest.java,**/S3Test.java,**/SqlServerTest.java,
-                 **/ThirdPartyTest.java,**/OracleEeTest.java"/>
+                 **/ThirdPartyTest.java"/>
       </batchtest>
       <batchtest todir="${build.test}" if="testcase">
         <fileset dir="${test.dir}" includes="**/${testcase}.java"/>
