--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,16 @@ configurations {
 
 compileJava.dependsOn(SqoopVersionFileGen)
 
+compileJava {
+    options.compilerArgs += '-proc:none'
+    options.compilerArgs += '-Xlint:all'
+}
+
+compileTestJava {
+    options.compilerArgs += '-proc:none'
+    options.compilerArgs += '-Xlint:all'
+}
+
 configurations.all {
     resolutionStrategy {
         force group: 'org.apache.avro', name: 'avro', version: avroVersion
@@ -320,16 +330,11 @@ task allTest (type: Test){
 def testBuildDir = "$buildDir/test/"
 def testBuildDirData ="$testBuildDir/data/"
 
-task buildFolder {
-    project.mkdir(testBuildDirData)
-}
-
 tasks.withType(Test) {
     testLogging {
         events 'passed', 'skipped'
     }
     workingDir = testBuildDirData
-    project.mkdir(workingDir)
     systemProperties(System.getProperties())
     systemProperty "test.data.dir", "$projectDir/testdata"
     systemProperty 'test.build.data', "$testBuildDir/data"
@@ -346,14 +351,21 @@ tasks.withType(Test) {
     maxHeapSize = "8G"
     jvmArgs "-da:org.apache.hadoop.hive.thrift.HadoopThriftAuthBridge"
 
-    dependsOn buildFolder
-
     jacoco{
         excludes = ["**/SqoopVersion*"]
     }
 
     forkEvery forkEveryDefault
     ignoreFailures ignoreTestFailures
+}
+
+project.tasks.each {
+  if ( it.name.toLowerCase().endsWith('test') ) {
+    it.doFirst({
+      project.mkdir(testBuildDir)
+      project.mkdir(testBuildDirData)
+    })
+  }
 }
 
 task kerberizedTest (type: Test){
