Oracle JDBC driver is now downloaded from a Maven repository.

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,11 @@ repositories {
     maven {
         url 'https://artifacts.alfresco.com/nexus/content/repositories/public/'
     }
+
+    // Oracle driver repository
+    maven {
+        url 'http://www.datanucleus.org/downloads/maven2/'
+    }
 }
 
 sourceSets {
@@ -104,12 +109,10 @@ configurations.all {
     exclude group: 'org.apache.hadoop', module: 'avro'
 }
 
-def sqoopThirdPartyLib = System.getProperty("sqoop.thirdparty.lib.dir")
 def forkEveryDefault = Integer.valueOf(System.getProperty("forkEvery.default", "0"))
 def ignoreTestFailures = Boolean.getBoolean("ignoreTestFailures")
 
 dependencies {
-    if (sqoopThirdPartyLib != null) runtime fileTree(dir: sqoopThirdPartyLib, include: '*.jar')
     compile group: 'org.apache.hadoop', name: 'hadoop-aws', version: hadoopVersion
     compile (group: 'org.apache.hadoop', name: 'hadoop-common', version: hadoopVersion) {
         exclude group: "asm", module: "asm"
@@ -177,6 +180,8 @@ dependencies {
     testCompile group: 'cubrid', name: 'cubrid-jdbc', version: cubridJdbcDriverVersion
     testCompile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: msSqlJdbcDriverVersion
     testCompile group: 'com.ibm.db2.jcc', name: 'db2jcc4', version: db2JdbcDriverVersion
+    testCompile group: 'oracle', name: 'ojdbc6', version: oracleJdbcDriverVersion
+
 }
 
 task unitTest (type: Test) {
