--- a/gradle.properties
+++ b/gradle.properties
@@ -55,6 +55,7 @@ mySqlConnectorVersion=5.1.47
 cubridJdbcDriverVersion=10.1.2.7694
 msSqlJdbcDriverVersion=7.0.0.jre8
 db2JdbcDriverVersion=10.1
+oracleJdbcDriverVersion=11.2.0.3
 
 checkstyleVersion=5.5
 
