[SQOOP-3430] Fix the CI

--- a/src/scripts/thirdpartytest/docker-compose/sqoop-thirdpartytest-db-services.yml
+++ b/src/scripts/thirdpartytest/docker-compose/sqoop-thirdpartytest-db-services.yml
@@ -94,7 +94,7 @@ services:
       timeout: 10s
       retries: 60
   oracle:
-      image: sath89/oracle-xe-11g
+      image: acktsw/oracle-xe-11g
       container_name: sqoop_oracle_container
       environment:
         COMPOSE_HTTP_TIMEOUT: 200
