Do not run all IT tests because some dependencies are old and do not support ARM64, e.g. Parquet

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,9 @@ jdk:
 
 jobs:
   include:
-    - name: "Build and test on ARM64 CPU architecture"
+    - name: "Linux ARM64"
       arch: arm64
-      env: TEST_TASK=test
+      env: TEST_TASK=unitTest
 
         
     
